--- a/login.html
+++ b/login.html
@@ -9,14 +9,15 @@
 <body>
     <h1 style="text-align: center;">Webboard KaKKaK</h1>
     <hr>
-    หมวดหมู่:
-    <select name="category">
-        <option value="all">--ทั้งหมด--</option>
-        <option value="general">เรื่องทั่วไป</option>
-        <option value="study">เรื่องเรียน</option>
-    </select>
-    <a href="login.html" style="float: right;">เข้าสู่ระบบ</a>
-
-
+    <table style="border: 2px solid black; width:40%" align="center">
+        <tr><td colspan="2" style="background-color: #6CD2FE;">เข้าสู่ระบบ</td></tr>
+        <tr><td>Login</td><td><input type="text" name="login" size="40"</td></tr>
+        <tr><td>Password</td><td><input type="text" name="pwd" size="40"</td></tr>
+        <tr><td colspan="2" align="center"><input type="submit" value="Login"></td></tr>
+    </table>
+    <br>
+    <div align="center">
+        ถ้ายังไม่ได้เป็นสมาชิก <a href="register.html">กรุณาสมัครสมาชิก</a>
+    </div>
 </body>
 </html>
